--- a/style.css
+++ b/style.css
@@ -339,6 +339,15 @@ header {
   font-size: 20px;
 }
 
+.location-description {
+  margin: 25px 0;
+}
+
+.day {
+  width: 100px;
+  height: 30px;
+}
+
 footer {
   background-color: #39312f;
   padding: 95px 0 145px;
