--- a/css/style.css
+++ b/css/style.css
@@ -228,7 +228,7 @@ header {
 
 .left-testimonial-block {
   width: 811px;
-  background-image: url(../images/CoffeePhoto.png);
+  background-image: url(../images/CoffeePhoto01.png);
   background-repeat: no-repeat;
   background-size: cover;
 }
