--- a/css/style.css
+++ b/css/style.css
@@ -233,15 +233,15 @@ header {
   background-size: cover;
 }
 
-.first-testimonial-picture {
+.testimonial-picture-1 {
   background-image: url(../images/CoffeePhoto01.png);
 }
 
-.second-testimonial-picture {
+.testimonial-picture-2 {
   background-image: url(../images/CoffeePhoto02.png);
 }
 
-.third-testimonial-picture {
+.testimonial-picture-3 {
   background-image: url(../images/CoffeePhoto03.png);
 }
 
