add mens images

--- a/css/style.css
+++ b/css/style.css
@@ -268,7 +268,7 @@ header {
   width: 83px;
   height: 83px;
   border-radius: 50%;
-  background-image: url(../images/ChrisParker.png);
+  background-image: url(../images/man1.png);
   background-repeat: no-repeat;
   background-position: center;
   margin: 0 auto;
