--- a/css/style.css
+++ b/css/style.css
@@ -170,6 +170,7 @@ header {
   justify-content: center;
   font-size: 40px;
   font-weight: normal;
+  text-transform: uppercase;
 }
 
 .coffee-menu-picture {
